--- a/index.html
+++ b/index.html
@@ -23,29 +23,30 @@
 
         // An App component under which all other components will be added
         class Team extends React.Component {
-            constructor(props) {
-                super(props)
-            }
-            
-            
-
-
             render() {
-                return <h1>{this.props.name}{this.props.score}{this.props.shotstaken}</h1>
+                return (
+                    <div className="Team">
+
+                        <h1>{this.props.name}</h1>
+
+
+
+                        <div className="Team1logo">
+
+                            <img src={this.props.logo} alt={this.props.name} />
+                        </div>
+
+
+                    </div>
+                )
             }
 
 
         }
 
         class Team2 extends React.Component {
-            constructor(props) {
-                super(props)
-            }
-
-
-
             render() {
-                return <h1>{this.props.name}{this.props.score}{this.props.shotstaken}</h1>
+                return
             }
 
 
@@ -55,14 +56,7 @@
         function App(props) {
             return (
                 <div>
-                    <Team name="Team Light " />
-                    <Team score="Score: " />
-                    <Team shotstaken="Shots Taken:" />
-
-                    <Team2 name="Team Dark " />
-                    <Team2 score="Score: " />
-                    <Team2 shotstaken="Shots Taken: " />
-
+                    <Team name="Light" logo="assets\images\light.jpg" />
 
 
 
