--- a/index.html
+++ b/index.html
@@ -23,6 +23,37 @@
 
         // An App component under which all other components will be added
         class Team extends React.Component {
+            constructor(props) {
+                super(props)
+                this.state = {
+
+                    shots: 0,
+                    score: 0
+                }
+            }
+
+
+
+            shotHandler = () => {
+                let score = this.state.score
+
+
+                if (Math.random() > 0.5) {
+                    score += 1
+                }
+
+
+                this.setState((state, props) => ({
+                    shots: state.shots + 1,
+                    score
+                }))
+            }
+
+
+
+
+
+
             render() {
                 return (
                     <div className="Team">
@@ -35,6 +66,20 @@
 
                             <img src={this.props.logo} alt={this.props.name} />
                         </div>
+
+                        <div>
+
+                            <h2>Shots:</h2> {this.state.shots}
+
+                        </div>
+
+
+                        <div>
+
+                            <h2>Score:</h2> {this.state.score}
+
+                        </div>
+                        <button onClick={this.shotHandler}>Shoot</button>
 
 
                     </div>
@@ -55,13 +100,19 @@
 
         function App(props) {
             return (
-                <div>
-                    <Team name="Light" logo="assets\images\light.jpg" />
+                <div className="App">
+                    <div className="Statistics">
+                        <Team name="Light" logo="assets\images\light.jpg" />
 
+                        <div className="Vs">
+                            <h1>Versus</h1>
+                        </div>
 
-
-
+                        <Team name="Dark" logo="assets\images\dark.jpg" />
+                    </div>
                 </div>
+
+
 
             )
 
