medium mode complete

--- a/index.html
+++ b/index.html
@@ -143,19 +143,9 @@
 
 
         function App(props) {
-            const light = {
-                name: 'Light' ,
-                logoSrc: '/assets/images/light.jpg'
-            }
-
-            const dark = {
-                name: 'Dark' ,
-                logoSrc: '/assets/images/darkness.jpg'
-            }
             return (
                 <div className="App">
-                   <Game venue="Hero V Villains" />
-                   <Game venue="USA vs USJ" />
+                   <Game venue="Heroes Vs Villains" />
                 </div>
 
 
